民事訴訟法 2009.6.12

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -144,6 +144,10 @@
 
 * 45 能獨立以法律行為負義務者，有訴訟能力。
 
+* 45.1 輔助人同意受輔助宣告之人為訴訟行為，應以文書證之。受輔助宣告之人就他造之起訴或上訴為訴訟行為時，無須經輔助人同意。受輔助宣告之人為捨棄、認諾、撤回或和解，應經輔助人以書面特別同意。
+
+> 釋：一、本條新增。二、民國九十八年十一月二十三日施行修正之民法（下稱修正後民法）第十五條之一增加輔助宣告規定，爰配合修正增訂本條規定。三、依修正後民法第十五條之二規定，受輔助宣告之人不因輔助宣告而喪失行為能力，僅於為該條第一項但書各款之重要行為，須經輔助人同意。而同條第一項第三款明定，受輔助宣告之人為訴訟行為，須經輔助人同意，為使法院對於同意之存否容易調查而確保訴訟程序之安定，乃於本條第一項明定應以文書證之。又關於受輔助宣告人為捨棄、認諾、撤回或和解，因關係受輔助宣告人之權益較鉅，爰設第三項明文規定須經輔助人另以書面特別同意。四、為保障他造訴訟權利，參照日本民事訴訟法第三十二條第一項規定，受輔助宣告之人被訴或被上訴而為訴訟行為時，不須經輔助人同意，爰設本條第二項規定。至受輔助宣告之人就他造所為相當於起訴、上訴之聲請、抗告而為訴訟行為時，亦不須經輔助人同意，自為當然之理。
+
 * 46 外國人依其本國法律無訴訟能力，而依中華民國法律有訴訟能力者，視為有訴訟能力。
 
 * 47 關於訴訟之法定代理及為訴訟所必要之允許，依民法及其他法令之規定。
@@ -156,9 +160,9 @@
 
 > 釋：配合第二百四十九條第一項但書規定修正之。
 
-* 50 前二條規定，於第四十一條、第四十四條之一及第四十四條之二之被選定人為訴訟行為者準用之。
+* 50 前二條規定，於第四十一條、第四十四條之一、第四十四條之二被選定人及第四十五條之一受輔助宣告之人為訴訟行為者準用之。
 
-> 釋：前二條所定能力欠缺之追認或補正，於新增第四十四條之一及第四十四條之二之被選定人為訴訟行為時，亦應有其準用，爰配合修正之。
+> 釋：凡受輔助宣告之人未經輔助人同意而為訴訟行為，或未以書面證之，或未經輔助人以書面為特別同意，其訴訟能力即有欠缺，而上揭欠缺非不可補正，應先定期命其補正，以免將來再為同一訴訟行為，而浪費勞力、時間或費用，故於本條增訂第四十五條之一受輔助宣告之人為訴訟行為者準用第四十八條、第四十九條之規定。據此規定，受輔助宣告之人上揭訴訟行為瑕疵，即因補正而溯及於行為時發生效力，而法院所許其暫為之訴訟行為，仍須俟補正而後生效，若不補正，因其訴訟行為所生之費用，依本法第八十九條第二項之規定，法院得依職權以裁定命其負擔。
 
 * 51 對於無訴訟能力人為訴訟行為，因其無法定代理人或其法定代理人不能行代理權，恐致久延而受損害者，得聲請受訴訟法院之審判長，選任特別代理人。無訴訟能力人有為訴訟之必要，而無法定代理人或法定代理人不能行代理權者，其親屬或利害關係人，得聲請受訴法院之審判長，選任特別代理人。選任特別代理人之裁定，並應送達於特別代理人。特別代理人於法定代理人或本人承當訴訟以前，代理當事人為一切訴訟行為。但不得為捨棄、認諾、撤回或和解。選定特別代理人所需費用，及特別代理人代為訴訟所需費用，得命聲請人墊付。
 
@@ -176,9 +180,9 @@
 
 * 55 共同訴訟中，一人之行為或他造對於共同訴訟人中一人之行為及關於其一人所生之事項，除別有規定外，其利害不及於他共同訴訟人。
 
-* 56 訴訟標的對於共同訴訟之各人必須合一確定者，適用下列各款之規定：一、共同訴訟人中一人之行為有利益於共同訴訟人者，其效力及於全體；不利益者，對於全體不生效力。二、他造對於共同訴訟人中一人之行為，其效力及於全體。三、共同訴訟人中之一人生有訴訟當然停止或裁定停止之原因者，其當然停止或裁定停止之效力及於全體。
+* 56 訴訟標的對於共同訴訟之各人必須合一確定者，適用下列各款之規定：一、共同訴訟人中一人之行為有利益於共同訴訟人者，其效力及於全體；不利益者，對於全體不生效力。二、他造對於共同訴訟人中一人之行為，其效力及於全體。三、共同訴訟人中之一人生有訴訟當然停止或裁定停止之原因者，其當然停止或裁定停止之效力及於全體。前項共同訴訟人中一人提起上訴，其他共同訴訟人為受輔助宣告之人時，準用第四十五條之一第二項之規定。
 
-> 釋：一、第一項本文「左列」修正為「下列」。二、第二項刪除，移列於第五十四條第二項，理由見第五十四條說明。
+> 釋：依本條第一項第一款規定，必要共同訴訟一人上訴時，效力及於其他共同訴訟人，於其他共同訴訟人為受輔助宣告之人時，因上訴係有利受輔助宣告之人，在解釋上乃屬當然及之，且如須經輔助人同意恐影響其他上訴人權益，故不須再經輔助人之同意，為避免爭議，爰增訂第二項規定。
 
 * 56.1 訴訟標的對於數人必須合一確定而應共同起訴，如其中一人或數人拒絕同為原告而無正當理由者，法院得依原告聲請，以裁定命該未起訴之人於一定期間內追加為原告。逾期未追加者，視為已一同起訴。法院為前項裁定前，應使該未起訴之人有陳述意見之機會。第一項未共同起訴之人所在不明，經原告聲請命為追加，法院認其聲請為正當者，得以裁定將該未起訴之人列為原告。但該原告於第一次言詞辯論期日前陳明拒絕為原告之理由，經法院認為正當者，得撤銷原裁定。第一項及前項裁定，得為抗告。第一項及第三項情形，如訴訟費用應由原告負擔者，法院得酌量情形，命僅由原起訴之原告負擔。
 
@@ -220,9 +224,9 @@
 
 > 釋：一、原條文規定，非律師而為訴訟代理人者，法院得以裁定禁止之。實務上以裁定禁止非律師為訴訟代理人者，並不多見，致效果不彰。而民事訴訟較具技術性，無法律素養之人代理訴訟行為，實不易勝任，為保護當事人權益，並使訴訟程序得以順利進行，訴訟代理人原則上應委任律師為之。惟我國不採強制律師代理制度，故如經審判長許可，亦得委任非律師為訴訟代理人。又審判長指揮訴訟，此項許可由審判長為之即可。爰修正第一項。二、審判長之許可，本應以裁定為之，如非律師為訴訟代理人，審判長已許其為本案訴訟行為，應視為已有許可為訴訟代理人之裁定，以省勞費，乃於第二項設擬制許可之規定。三、委任非律師為訴訟代理人，雖經審判長許可，如其不適或不宜為訴訟行為，審判長自得隨時以裁定撤銷之。又為便利委任人另行委任適當之訴訟代理人或自為訴訟，此項撤銷裁定並應送達於為訴訟委任之人。乃增列第三項。
 
-* 69 訴訟代理人，應於最初為訴訟行為時，提出委任書。但由當事人以言詞委任，經法院書記官記明筆錄，或經法院、審判長依法選任者，不在此限。前項委任或選任，應於每審級為之。但有下列情形之一者，不在此限：一、當事人就特定訴訟於委任書表明其委任不受審級限制，並經公證者。二、依第五百八十五條第一項選任者。
+* 69 訴訟代理人，應於最初為訴訟行為時，提出委任書。但由當事人以言詞委任，經法院書記官記明筆錄，或經法院、審判長依法選任者，不在此限。前項委任或選任，應於每審級為之。但有下列情形之一，不在此限：一、當事人就特定訴訟於委任書表明其委任不受審級限制，並經公證者。二、依第五百七十一條之一第二項或第五百八十五條第一項選任者。
 
-> 釋：一、原條文列為第一項。又法院或審判長依法律規定選任訴訟代理人者，應以裁定為之，毋庸當事人另行提出委任書，爰修正但書規定。二、委任或選任訴訟代理人，原則上應於每審級為之，爰增設第二項。惟為便利當事人使用訴訟制度，如當事人就特定訴訟於委任書表明其委任不受審級限制，並經公證者，應無不許之理，爰增訂但書於第一款明定之。至於受委任之訴訟代理人是否得於各該審級執行職務，自仍應依法律之規定（例如第六十八條、第四百六十六條之一等），乃屬當然。又鑑於未成年子女或養子女之事實上訴訟能力普遍缺乏，為免其每審級聲請選任訴訟代理人之勞費，乃於但書第二款規定，依第五百八十五條第一項選任者，亦可不受審級之限制。至於審判長為養子女等選任訴訟代理人時，如認有必要，自仍得選任其為某審級之訴訟代理人，並於裁定中特為表明。
+> 釋：鑑於受輔助宣告之人訴訟能力不足，為免法院為其每審級選任訴訟代理人之勞費，乃於第二項但書第二款規定，增列法院依第五百七十一條之一第二項選任者，亦可不受審級之限制。至於審判長為受輔助宣告之人選任訴訟代理人時，如認有必要，自仍得選任其為某審級之訴訟代理人，並於裁定中特為表明。
 
 * 70 訴訟代理人就其受委任之事件有為一切訴訟行為之權。但捨棄、認諾、撤回、和解、提起反訴、上訴或再審之訴及選任代理人，非受特別委任不得為之。關於強制執行之行為或領取所爭物，準用前項但書之規定。如於第一項之代理權加以限制者，應於前條之委任書或筆錄內表明。
 
@@ -290,9 +294,9 @@
 
 > 釋：一、本條新增。二、本條係原民事訴訟費用法第二十條移列修正。原條文所定之裁判費因社會經濟狀況變遷，顯屬偏低，爰提高為新臺幣一千元，以符實際。
 
-* 77.19 聲請或聲明不徵收費用。但下列第一款之聲請，徵收裁判費新臺幣五百元；第二款至第七款之聲請，徵收裁判費新臺幣一千元：一、聲請發支付命令。二、聲請參加訴訟或駁回參加。三、聲請回復原狀。四、起訴前聲請證據保全。五、聲請假扣押、假處分或撤銷假扣押、假處分裁定。六、聲請宣告禁治產或撤銷禁治產。七、聲請公示催告、除權判決或宣告死亡。
+* 77.19 聲請或聲明不徵費用。但下列第一款之聲請，徵收裁判費新臺幣五百元；第二款至第七款之聲請，徵收裁判費新臺幣一千元：一、聲請發支付命令。二、聲請參加訴訟或駁回參加。三、聲請回復原狀。四、起訴前聲請證據保全。五、聲請假扣押、假處分或撤銷假扣押、假處分裁定。六、聲請監護宣告、輔助宣告；變更或撤銷監護宣告、輔助宣告。七、聲請公示催告、除權判決或宣告死亡。
 
-> 釋：一、本條於九十二年二月七日修訂時，以社會經濟狀況變遷，原條文所定之裁判費顯屬過低為由，而提高為新臺幣一千元，以符實際。惟於聲請發支付命令部分，提高後之裁判費與提起小額訴訟程序應徵收之裁判費相同，致債權人多以提起小額訴訟程序之方式為之，不但造成當事人之不便，亦增加法院之負擔。二、為提高債權人聲請發支付命令之意願，爰將聲請發支付命令之裁判費由新臺幣一千元修訂為新臺幣五百元，且將原第四款移列為第一款，將原第一款至第三款移列為第二款至第四款。
+> 釋：一、配合修正後民法已將「禁治產」改為「監護」，並增加輔助宣告規定，爰配合修正現行條文但書第六款。二、修正後民法第十四條第四項、第十五條之一第三項立法意旨，係為避免當事人須待監護宣告或輔助宣告、或撤銷監護宣告或輔助宣告之聲請之裁定確定後，始得另行聲請輔助宣告之不便。是如依本法第六百二十四條之六規定聲請變更監護宣告為輔助宣告；依第六百二十四之七規定聲請變更輔助宣告為監護宣告者，均屬聲請變更事件，應依第六款規定，徵收裁判費；至依第六百二十四條之五規定，因法院對於撤銷監護宣告聲請，認仍有輔助宣告之必要而輔助宣告；依第六百二十四條之八規定變更輔助宣告之聲請為監護宣告之聲請者，則因均屬同一事件，應不另收費。
 
 * 77.2 以一訴主張數項標的者，其價額合併計算之。但所主張之數項標的互相競合或應為選擇者，其訴訟標的價額，應依其中價額最高者定之。以一訴附帶請求其孳息、損害賠償、違約金或費用者，不併算其價額。
 
@@ -2424,7 +2428,13 @@
 
 * 570 未成年之夫或妻，就婚姻無效或確認婚姻不成立之訴，亦有訴訟能力。
 
-* 571 婚姻事件，夫或妻為禁治產人者，應由其監護人代為訴訟行為；如監護人即係其配偶時，應由親屬會議所指定之人，代為訴訟行為。監護人提起訴訟者，應得親屬會議之允許。
+* 571 婚姻事件，夫或妻為受監護宣告之人者，應由其監護人代為訴訟行為；如監護人即係其配偶或為起訴之第三人時，法院應依利害關係人之聲請或依職權為受監護宣告之人選任特別代理人，代為訴訟行為。監護人違反受監護人之利益而起訴者，法院應以裁定駁回之。
+
+> 釋：一、配合修正後民法用語及將監護改由法院監督之規定，作文字修正。二、依民法第一千一百十三條規定準用第一千零九十八條第二項規定，監護人於監護權限內，為受監護人之法定代理人。如監護人即係其配偶時，或監護人以夫妻為被告提起撤銷婚姻事件時，法院應依利害關係人之聲請或依職權為受監護宣告之人選任特別代理人，代為訴訟行為，作為受監護人之保護機制，爰修正第一項規定。三、又民法修正後，已無由親屬會議指定之人，代為訴訟行為之規定，爰將原第一項有關親屬會議規定及原第二項規定刪除。四、於個案具體事實中，若監護人代婚姻事件中受監護人之夫或妻為訴訟行為時，其當本於為受監護人之最佳利益而為訴訟行為，始符合為受監護人設置監護人之本旨，此乃當然之理。如監護人違反上開原則而起訴時，法院應以裁定駁回之，爰增訂第二項規定。
+
+* 571.1 受輔助宣告之人於婚姻事件有訴訟能力，為訴訟行為時，無須經輔助人同意。受輔助宣告之人為訴訟行為者，受訴法院之審判長應依聲請，選任律師為其訴訟代理人，於認為必要時，並得依職權為之選任。選任訴訟代理人之裁定，並應送達於該訴訟代理人。
+
+> 釋：一、本條新增。二、受輔助宣告人在婚姻事件應與身分行為相同，須親自為之。未成年之夫或妻，就婚姻無效或確認婚姻不成立之訴，亦有訴訟能力，基於相同法理，受輔助宣告之人於婚姻事件，仍應有訴訟能力，爰設第一項規定。三、受輔助宣告之人固仍有訴訟能力，惟其或因精神障礙或其他心智缺陷，辨識能力顯有不足，為保護其利益起見，仿本法第五百八十五條第一項之規定，爰設第二項規定。四、又關於法院依本條第一項選任律師為受輔助宣告之人之訴訟代理人，應給與律師之相當報酬，因本法第七十七條之二十五業已明文規定，於本條即無再重複規定之必要，併此敘明。五、受訴法院之審判長選任律師為受輔助宣告之人之訴訟代理人，應以裁定行之，此項裁定，除向當事人送達外，應併送達於被選任為訴訟代理人之律師，爰設第三項規定。
 
 * 572 婚姻無效、確認婚姻成立或不成立、撤銷婚姻、離婚或夫妻同居之訴，得合併提起，或於第一審或第二審言詞辯論終結前，為訴之變更、追加或提起反訴。依前項規定得為訴之變更、追加或提起反訴者，不得另行起訴，其另行起訴者，法院應以裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。受移送之法院不得以違背專屬管轄為理由，移送於他法院。非婚姻事件之訴，以夫妻財產之分配或分割、返還財物、給付家庭生活費用或贍養費或扶養之請求，或由訴之原因、事實所生損害賠償之請求為限，得與第一項之訴合併提起，或於第一審或第二審言詞辯論終結前，為訴之追加或提起反訴；其另行起訴者，法院得以裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。
 
@@ -2470,11 +2480,15 @@
 
 > 釋：一、本條係新增。二、第五百七十二條之一事件，第一、二審法院為判決後，如何聲明不服，應適用上訴或抗告程序，滋生疑義，有明文加以規定之必要。三、規定當事人僅就本案部分提起上訴者，視為附帶請求部分已提起上訴。四、因附帶請求部分係為保護子女利益而設，必須訊速妥適處理，故宜適用抗告程序為之，特於第二項明文加以規定，以杜爭議。
 
-* 583 收養無效或撤銷收養，與確認收養關係成立或不成立及終止收養關係之訴，專屬養父母之住所地或其死亡時住所地之法院管轄。
+* 583 收養無效、終止收養無效或撤銷收養，與確認收養關係成立或不成立，及終止收養關係或撤銷終止收養之訴，專屬養父母之住所地或其死亡時住所地之法院管轄。
+
+> 釋：配合修正後民法第一千零八十條之二、第一千零八十條之三分別增訂終止收養無效及撤銷終止收養之規定，爰修正本條。
 
 * 584 前條之訴，養子女雖不能獨立以法律行為負義務者，亦有訴訟能力。
 
-* 585 未成年之養子女為訴訟行為者，受訴法院之審判長應依聲請，選任律師為其訴訟代理人，於認為必要時，並得依職權為之選任。前項情形，審判長得命給與律師相當之報酬。選任訴訟代理人之裁定，並應送達於該訴訟代理人。
+* 585 未成年之養子女為訴訟行為者，受訴法院之審判長應依聲請，選任律師為其訴訟代理人，於認為必要時，並得依職權為之選任。選任訴訟代理人之裁定，並應送達於該訴訟代理人。
+
+> 釋：本法第七十七條之二十五業已明文規定，法院或審判長依法律規定，為當事人選任律師為訴訟代理人，律師報酬應由法院或審判長酌定之，則本條第二項規定，即屬重複，應予刪除。
 
 * 586 養父母與養子女間之訴訟，如養子女無行為能力，而養父母為其法定代理人者，應由本生父母代為訴訟行為；無本生父母者，由本生父母方面親屬會議所指定之人代為訴訟行為。
 
@@ -2482,15 +2496,21 @@
 
 * 588 第五百八十三條之訴，除別有規定外，準用婚姻事件程序之規定。
 
-* 589 否認或認領子女，與認領無效或撤銷認領之訴，及就母再婚後所生子女確定其父之訴，專屬子女住所地或其死亡時住所地之法院管轄。
+* 589 否認或認領子女、否認推定生父之訴，與認領無效或撤銷認領之訴，及就母再婚後所生子女確定其父之訴，專屬子女住所地或其死亡時住所地之法院管轄。
 
-* 589.1 否認子女之訴，由夫起訴者，以妻及子女為共同被告；由妻起訴者，以夫及子女為共同被告。前項起訴，妻或夫死亡者，以子女為被告。
+> 釋：配合修正後民法第一千零六十三條及大法官釋字第五八七號解釋，增列子女亦得提起否認推定生父之訴，爰修正本條增列該訴之管轄規定。
 
-> 釋：修正後之民法第一千零六十三條第二項規定，夫妻各有獨立提起否認子女之訴之權，但其由一方提起之訴，依民事訴訟法第五百九十六條第一項準用第五百八十二條第一項之規定，其判決效力應及於他方，即等於以一方之行為影響法律賦予他方訴訟權之行使，而子女是否係自夫受胎所生，在法律上對夫或妻均有重大關係，應以夫妻同為該訴訟之當事人，始易發現真實。
+* 589.1 否認子女之訴，由夫起訴者，以妻及子女為共同被告；由妻起訴者，以夫及子女為共同被告。前項起訴，妻或夫死亡者，以子女為被告。子女否認推定生父之訴，以法律推定之生父為被告。
 
-* 590 否認子女之訴，夫妻之一方於法定起訴期間內或期間開始前死亡者，繼承權被侵害之人得提起之。依前項規定起訴者，應自被繼承人死亡時起，於六個月內為之。夫妻之一方於提起否認子女之訴後死亡者，繼承權被侵害之人得承受其訴訟。
+> 釋：配合修正後民法第一千零六十三條，規定子女提起否認法律推定生父之訴之被告適格，參照大法官釋字第五八七號解釋，應許子女以法律推定之生父為被告，提起否認生父之訴之意旨，明定子女否認生父之訴，應以法律推定之生父為被告，爰增訂第三項規定。
 
-> 釋：否認子女之訴，民法第一千零六十三條第二項已修正為如夫妻之一方能證明妻非自夫受胎者，均得提起。為配合修正，爰將第一項、第三項「夫」修正為「夫妻之一方」，第二項「夫死亡時起」修正為「被繼承人死亡時起」。
+* 590 否認子女之訴，夫妻之一方於法定起訴期間內或期間開始前死亡者，繼承權被侵害之人得提起之。依前項規定起訴者，應自被繼承人死亡時起，於一年內為之。夫妻之一方於提起否認子女之訴後死亡者，繼承權被侵害之人得承受其訴訟。前三項規定，於否認推定生父之訴，準用之。
+
+> 釋：一、原第二項規定起訴期間六個月之起算時點，係自被繼承人死亡時起算，惟繼承權被侵害之人，多於繼承開始後，始得瞭解他人侵害繼承權之事實，六個月期間，實屬過短，爰參照民法第一千零六十三條規定，將本項起訴期間延長為一年。二、否認推定生父之訴，如子女死亡者，與否認子女之訴夫妻之一方死亡者，有共通之處，爰增訂第四項，準用第一項至第三項規定。
+
+* 590.1 生父於認領子女之訴起訴後死亡者，由其繼承人承受訴訟；無繼承人者，由社會福利主管機關承受訴訟。
+
+> 釋：一、本條新增。二、生父於認領子女之訴起訴後死亡，應由繼承人承受訴訟，如無繼承人時，為免認領子女之訴延宕，致影響應受認領子女利益，爰參照修正後民法第一千零六十七條第二項規定，明文規定無繼承人時，由社會福利主管機關承受訴訟，以保護子女利益。
 
 * 591 就母再婚後所生子女確定其父之訴，母之配偶及前配偶互為被告。由子女或母起訴者，以母之配偶及前配偶為共同被告；母之配偶或前配偶死亡者，以生存者為被告。
 
@@ -2502,71 +2522,161 @@
 
 * 595 第五百八十九條及第五百九十二條之訴，法院得斟酌當事人所未提出之事實。前項事實，於裁判前應令當事人有辯論之機會。
 
-* 596 第五百六十八條第一項但書、第二項及第三項、第五百七十一條、第五百七十二條第三項、第五百七十二條之一、第五百七十四條第三項、第四項、第五百七十五條之一、第五百七十六條、第五百七十九條至第五百八十一條及第五百八十二條第一項之規定，於第五百八十九條及第五百九十二條之訴準用之。但認領子女之訴，由生母或其他法定代理人起訴，因無理由被駁回者，其判決對於非婚生子女，不準用第五百八十二條第一項之規定。第五百八十四條至第五百八十六條之規定，於第五百八十九條之訴準用之。第五百七十二條第一項及第五百七十三條之規定，於認領無效或撤銷認領之訴準用之。
+* 596 第五百六十八條第一項但書、第二項及第三項、第五百七十一條、第五百七十一條之一、第五百七十二條第三項、第五百七十二條之一、第五百七十四條第三項、第四項、第五百七十五條之一、第五百七十六條、第五百七十九條至第五百八十一條及第五百八十二條第一項之規定，於第五百八十九條及第五百九十二條之訴準用之。但認領子女之訴，由生母或其他法定代理人起訴，因無理由被駁回者，其判決對於非婚生子女，不準用第五百八十二條第一項之規定。第五百八十四條至第五百八十六條之規定，於第五百八十九條之訴準用之。第五百七十二條第一項及第五百七十三條之規定，於認領無效或撤銷認領之訴準用之。
 
-> 釋：一、原第五百七十二條第二項已移列為第三項，又本法為配合民法親屬編有關父母對於未成年子女權利義務行使或負擔之規定，爰加以修正之。二、第二項、第三項不修正。
+> 釋：本法配合修正後民法增加輔助宣告規定，增列第五百七十一條之一規定，且於第五百八十九條及第五百九十二條之訴有準用之必要，爰修正第一項，增列準用第五百七十一條之一規定。
 
-* 597 禁治產之聲請，專屬應禁治產人住所地之法院管轄。第五百六十八條第一項但書及第二項之規定，於前項聲請準用之。
+* 597 監護宣告之聲請，專屬應受監護宣告之人住所地之法院管轄。第五百六十八條第一項但書及第二項之規定，於前項聲請準用之。
 
-* 598 禁治產之聲請，應表明其原因、事實及證據。
+> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
 
-* 599 法院得於禁治產之程序開始前，命聲請人提出診斷書。
+* 598 監護宣告之聲請，應表明其原因、事實及證據。
 
-* 600 禁治產之程序，不得公開行之。
+> 釋：配合修正後民法第十四條第一項規定，修正文字。
 
-* 601 法院就禁治產之聲請，應斟酌聲請人所表明之事實及證據，依職權為必要之調查。調查費用，如聲請人未預納者，由國庫墊付。
+* 599 法院得於監護宣告之程序開始前，命聲請人提出診斷書。
 
-* 602 法院應於鑑定人前訊問應禁治產人。但有礙難訊問之情形或恐有害其健康者，不在此限。前項訊問，得使受託法官為之。
+> 釋：配合修正後民法第十四條第一項規定，修正文字。
 
-> 釋：第二項「推事」修正為「法官」。
+* 600 監護宣告之程序，不得公開行之。
 
-* 603 禁治產之宣告，非就應禁治產人之心神狀況訊問鑑定人後，不得為之。
+> 釋：配合修正後民法第十四條第一項規定，修正文字。
 
-* 604 宣告禁治產之裁定，應附理由。前項裁定，應送達於聲請人及禁治產人之法定代理人，或依法律應為監護人之人。
+* 601 法院就監護宣告之聲請，應斟酌聲請人所表明之事實及證據，依職權為必要之調查。調查費用，如聲請人未預納者，由國庫墊付。
 
-* 605 宣告禁治產之裁定，自禁治產人之法定代理人，或依法律應為監護人之人受送達時發生效力。前項裁定送達後，法院應以相當之方法，將該裁定要旨公告之。
+> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
 
-* 606 法院於宣告禁治產前，因保護應禁治產人之身體及財產，得命為必要之處分；於宣告後，認為必要時亦同。前項處分，法院得依聲請撤銷之。關於第一項處分及撤銷處分之裁定，得為抗告。
+* 602 法院應於鑑定人前訊問應受監護宣告之人。但有礙難訊問之情形或恐有害其健康者，不在此限。前項訊問，得使受託法官為之。
 
-* 607 駁回禁治產聲請之裁定，得為抗告。第五百九十九條至第六百零一條之規定，於抗告法院之程序準用之。
+> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
 
-* 608 關於聲請禁治產程序之費用，如宣告禁治產者，由禁治產人負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
+* 603 監護之宣告，非就應受監護宣告之人之精神或心智狀況訊問鑑定人後，不得為之。
 
-> 釋：一、本條第一項不修正。二、依民法第十四條修正條文，檢察官於宣告禁治產事件，亦得為聲請人；當檢察官為聲請人時，如有應行負擔程序費用之情形，參照非訟事件法第八條第一項但書之例，其費用應由國庫支付。爰於本條第二項增設但書，以資配合。
+> 釋：配合修正後民法第十四條第一項用語，酌予修正文字。
 
-* 609 宣告禁治產之裁定，不得抗告。依民法規定得聲請禁治產之人，得向就禁治產之聲請曾為裁判之地方法院，提起撤銷禁治產宣告之訴。
+* 604 監護宣告之裁定，應同時選定監護人及指定會同開具財產清冊之人，並附理由。前項裁定，應送達於聲請人、受監護宣告之人、法院選定之監護人及法院指定會同開具財產清冊之人；受監護宣告之人另有法定代理人者，並應送達之。
 
-* 610 撤銷禁治產宣告之訴，以聲請禁治產人為被告。由聲請禁治產人起訴或該聲請人死亡者，以禁治產人之法定代理人為被告。
+> 釋：一、依修正後民法第一千一百十一條第一項規定，法院為監護之宣告時，應依職權就配偶、四親等內之親屬、最近一年有同居事實之其他親屬、主管機關、社會福利機構或其他適當之人選定一人或數人為監護人，並同時指定會同開具財產清冊之人，爰修正第一項及第二項文字。二、配合修正後民法第一千一百十一條刪除法定監護人之規定，並另規定法院應依職權為受監護宣告之人選定監護人，爰將第二項「依法律應為監護人之人」，修正為「法院選定之監護人」。又修正後民法第一千一百十一條規定，法院應另指定會同開具財產清冊之人，為使法院選定之監護人及指定會同開具財產清冊之人，均能收受送達。爰將本項之「或」修正為「及」。另受監護宣告之人非必有法定代理人，爰將第二項法定代理人之規定，修正為如有法定代理人時，並應向其送達。
 
-* 611 撤銷禁治產宣告之訴，應於三十日之不變期間內提起之。前項期間，於禁治產人自其知悉禁治產宣告時起算；於他人自該裁定發生效力時起算。
+* 605 前條第一項之裁定，自法院選定之監護人受送達或當庭受告知時發生效力。前項裁定生效後，法院應以相當之方法，將該裁定要旨公告之。
 
-* 612 撤銷禁治產宣告之訴，受宣告人有訴訟能力。第五百八十五條之規定，於受宣告人為訴訟行為者準用之。
+> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、本條原第一項規定之「法定代理人」，應係指未成年人之監護宣告，未成年人之監護宣告法院所選定之監護人與法定代理人非同一人時，以法院選定之監護人優先，故應以法院選定之監護人之送達為生效之始期，爰刪除向法定代理人為送達之規定。三、修正前禁治產制度，係由法定監護人為禁治產人之監護人，修正後改由法院選定監護人任之，無法定監護人之規定。監護宣告裁定生效前，尚無監護人，為符合民法保護受監護宣告之人之精神，迅速照護受監護人之權益，宜當庭告知選定監護人，並記明筆錄，使宣告監護裁定及早發生效力，如當庭告知與送達不一致，以先生效者為準，爰修正第一項規定。四、又第一項裁定規定生效時點因送達或當庭告知而有不同，爰配合修正第二項規定。
 
-* 613 撤銷禁治產宣告之訴，不得合併提起他訴，或於其程序為訴之追加或提起反訴。
+* 606 法院於監護宣告前，因保護應受監護宣告之人之身體或財產，得命為必要之處分；於宣告後，認為必要時亦同。前項處分，法院得依聲請或依職權撤銷之。關於第一項處分及撤銷處分之裁定，得為抗告。
 
-* 614 受禁治產宣告人於判決確定前死亡者，關於本案視為訴訟終結。
+> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、受監護宣告之人之身體或財產，其一可能受到侵害時，即得命為必要之處分，爰將第一項之「及」修正為「或」。三、第一項之處分，法院既得依職權為之，自亦得依職權撤銷之，爰修正第二項規定。
 
-* 615 第五百八十一條、第五百九十四條、第五百九十五條、第六百零二條及第六百零三條之規定，於撤銷禁治產宣告之訴準用之。
+* 607 駁回監護宣告聲請之裁定，得為抗告。第五百九十九條至第六百零一條之規定，於抗告法院之程序準用之。
 
-* 616 撤銷禁治產宣告之訴，法院認為有理由者，應以判決撤銷宣告禁治產之裁定。前項情形，法院於判決確定前，因保護禁治產人之身體或財產，得命為必要之處分。第六百零六條第二項及第三項之規定，於前項處分準用之。
+> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
 
-* 617 在撤銷禁治產宣告前，監護人所為之行為，不失其效力。在撤銷禁治產宣告前，禁治產人所為之行為，不得本於宣告禁治產之裁定，而主張無效。
+* 608 關於聲請監護宣告程序之費用，如宣告監護者，由受監護宣告之人負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
 
-* 618 撤銷禁治產宣告之判決確定後，應由第一審受訴法院公告之。
+> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
 
-* 619 依民法規定得聲請禁治產之人，於禁治產之原因消滅後，得聲請撤銷禁治產。
+* 609 宣告監護之裁定，不得抗告。依民法規定得聲請監護宣告之人，得向曾就監護宣告之聲請為裁判之地方法院，提起撤銷監護宣告之訴。
 
-* 620 撤銷禁治產之聲請，專屬禁治產人住所地之地方法院管轄。第五百六十八條第一項但書及第二項之規定，於前項聲請準用之。撤銷禁治產之聲請，不能依前二項規定定其管轄法院者，得向就禁治產之聲請曾為裁判之地方法院為之。
+> 釋：一、配合修正後民法第十四條第一項規定，修正文字。二、為使文義更明確，將第二項文字酌予調整。
 
-* 621 第五百九十八條至第六百零三條之規定，於撤銷禁治產之聲請準用之。
+* 609.1 對於選定監護人及指定會同開具財產清冊之人之裁定，得為抗告。抗告法院為裁定前，應使抗告人、受監護宣告之人、法定代理人、選定監護人及指定會同開具財產清冊之人有陳述意見之機會。抗告法院認抗告有理由者，應自為裁定。對於抗告法院之裁定，不得再為抗告。
 
-* 622 關於聲請撤銷禁治產程序之費用，如撤銷禁治產者，由禁治產人負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
+> 釋：一、本條新增。二、法院選定監護人及指定會同開具財產清冊之人之裁定，因影響關係人之權益，宜賦予救濟之機會，爰設第一項規定。又得為抗告之人，自以受裁定之當事人及經法院選定之監護人及指定會同開具財產清冊之人為限，乃屬當然。三、依本法第六百零五條第一項規定，監護宣告、選定監護人及指定會同開具財產清冊之人之裁定，自法院選定之監護人受送達或當庭受告知時即生效力。本法第四百九十一條第一項則規定「抗告，除別有規定外，無停止執行之效力。」是對於選定監護人及指定會同開具財產清冊之人之裁定提起抗告者，在抗告審審理期間，第一審法院選定之監護人及指定會同開具財產清冊之人，仍應依法執行相關職務。四、為保障利害關係人之程序權，抗告法院於裁定前，應使抗告人、受監護宣告之人、法定代理人、選定監護人及指定會同開具財產清冊之人，均有陳述意見之機會，爰設第二項規定。五、為免程序拖延，致法院選定之監護人及指定會同開具財產清冊之人未能及時執行職務，抗告法院認抗告有理由，為廢棄或變更時，應自為裁定，爰設第三項規定。且對於抗告法院之裁定，不得再為抗告，爰設第四項規定。
 
-> 釋：一、本條第一項不修正。二、依民法第十四條修正條文，檢察官於撤銷禁治產事件，亦得為聲請人，當檢察官為聲請人時，如有應行負擔程序費用之情形，參照非訟事件法第八條第一項但書之例，其費用應由國庫支付。爰於本條第二項增設但書，以資配合。
+* 610 撤銷監護宣告之訴，以聲請監護宣告之人為被告。由聲請監護宣告之人起訴或該聲請人死亡者，以監護人為被告；如該聲請人為監護人者，以受監護宣告之人為被告。
 
-* 623 撤銷禁治產之裁定，應附理由。前項裁定，應送達於聲請人及禁治產人。第六百十八條之規定，於第一項裁定準用之。
+> 釋：一、配合修正後民法第十四條第一項規定，修正文字。二、撤銷監護宣告之訴，原規定以聲請監護宣告之人為被告，如聲請監護宣告之人提起撤銷監護宣告之訴或死亡時，即不能為被告，故明定以監護人為被告，但如聲請人即為監護人時，亦不能為被告，故改以受監護宣告之人為被告，爰修正第二項規定。
 
-* 624 駁回撤銷禁治產聲請之裁定，不得抗告。得聲請撤銷禁治產之人，對於前項裁定，得向就該聲請曾為裁判之地方法院提起撤銷之訴。第六百十條、第六百十二條至第六百十六條、第六百十七條第一項及第六百十八條之規定，於前項之訴準用之。
+* 611 撤銷監護宣告之訴，應於三十日之不變期間內提起之。前項期間，於受監護宣告之人自其知悉受監護宣告時起算，於他人自該裁定發生效力時起算。
+
+> 釋：配合修正後民法第十四條第一項規定，修正文字。
+
+* 612 撤銷監護宣告之訴，受監護宣告之人有訴訟能力。第五百八十五條之規定，於受監護宣告之人為訴訟行為者準用之。
+
+> 釋：配合修正後民法第十四條第一項規定，修正文字。
+
+* 613 撤銷監護宣告之訴，不得合併提起他訴，或於其程序為訴之追加或提起反訴。
+
+> 釋：配合修正後民法第十四條第一項規定，修正文字。
+
+* 614 受監護宣告之人於判決確定前死亡者，關於本案視為訴訟終結。
+
+> 釋：配合修正後民法第十四條第一項規定，修正文字。
+
+* 615 聲請監護宣告之人為被告，於判決確定前死亡者，由監護人承受訴訟。第五百八十一條、第五百九十四條、第五百九十五條、第六百零二條及第六百零三條之規定，於撤銷監護宣告之訴準用之。
+
+> 釋：一、原條文移列第二項，並配合修正後民法第十四條第一項規定，修正文字。二、新增第一項。按如聲請監護宣告之人為被告，在訴訟繫屬中死亡，非屬本法第六百十四條之情形。若依一般法理，由其繼承人承受訴訟，自非妥適，爰明定由監護人承訴訟。惟若為被告之監護宣告聲請人即監護人死亡時，依民法第一千一百零六條第一項第一款規定，法院依聲請或依職權選定新監護人，訴訟程序應於新監護人承受訴訟前當然停止。
+
+* 616 撤銷監護宣告之訴，法院認為有理由者，應以判決撤銷宣告監護之裁定。前項情形，法院於判決確定前，因保護受監護宣告之人之身體或財產，得命為必要之處分。第六百零六條第二項及第三項之規定，於前項處分準用之。
+
+> 釋：一、配合修正後民法第十四條第一項規定，修正第一項及第二項文字。二、第三項未修正。
+
+* 616.1 選定監護人及指定會同開具財產清冊之人之裁定，於撤銷監護宣告判決確定時，自始失其效力。
+
+> 釋：一、本條新增。二、撤銷監護宣告裁定之判決確定時，該裁定因撤銷而自始失其效力，因監護宣告而選定監護人及指定會同開具財產清冊之人之裁定，當然失所附麗，溯及失效，爰設本條，以期明確。
+
+* 617 在撤銷監護宣告判決確定前，監護人所為之行為，不失其效力。在撤銷監護宣告判決確定前，受監護宣告之人所為之行為，不得本於宣告監護之裁定，而主張無效。
+
+> 釋：一、配合修正後民法第十四條第一項規定，修正文字。二、撤銷監護宣告判決確定後，原監護宣告裁定因被撤銷而自始失其效力，修正前第一項條文未明文規定以撤銷監護宣告判決確定為時點，易生爭議，爰修正明定之。
+
+* 618 撤銷監護宣告判決確定後，應由第一審受訴法院公告其要旨。
+
+> 釋：一、配合修正後民法第十四條第一項規定，修正文字。二、按宣告監護之裁定生效後，依本法第六百零五條第二項規定，法院應以相當之方法，將該裁定要旨公告之，然若該裁定自始非當，經判決確定撤銷後，自亦應公告撤銷監護宣告之判決要旨，以保障受監護宣告之人之權益，爰修正本條。
+
+* 619 依民法規定得聲請監護宣告之人，於監護宣告之原因消滅後，得聲請撤銷監護宣告。
+
+> 釋：配合修正後民法第十四條第二項規定，修正文字。
+
+* 620 撤銷監護宣告之聲請，專屬受監護宣告之人住所地之地方法院管轄。第五百六十八條第一項但書及第二項之規定，於前項聲請準用之。撤銷監護宣告之聲請，不能依前二項規定定其管轄法院者，得向曾就監護宣告之聲請為裁判之地方法院為之。
+
+> 釋：一、配合修正後民法第十四條第二項規定，修正第一項及第三項文字。另為使文義更明確，將第三項文字酌予調整。二、第二項未修正。
+
+* 621 第五百九十八條至第六百零三條之規定，於撤銷監護宣告之聲請準用之。
+
+> 釋：一、配合修正後民法第十四條第二項規定，修正文字。二、本條係規範單純為撤銷監護宣告之聲請，至修正後民法第十四條第四項規定之情形，另增訂第六百二十四條之五規定規範之，併此敘明。
+
+* 622 關於聲請撤銷監護宣告程序之費用，如撤銷監護宣告者，由受監護宣告之人負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
+
+> 釋：一、配合修正後民法第十四條第二項規定，修正第一項文字。二、第二項未修正。
+
+* 623 撤銷監護宣告之裁定，應附理由。前項裁定，應送達於聲請人、受監護宣告之人、法院選定之監護人及法院指定會同開具財產清冊之人；受監護宣告之人另有法定代理人者，並應送達之。選定監護人及指定會同開具財產清冊之人之裁定，於撤銷監護宣告裁定確定時，嗣後失其效力。第六百十八條之規定，於第一項裁定準用之。
+
+> 釋：一、配合修正後民法第十四條第二項規定，修正第一項及第二項文字。第二項並增列受監護宣告之人、法院選定之監護人、法院指定會同開具財產清冊之人及受監護宣告之人，如另有法定代理人，該法定代理人為應受送達之人。又對於撤銷監護宣告之裁定，並未明文規定不得抗告，依本法第四百八十二條規定，自得提起抗告，併予敘明。二、原條文第三項移列為第四項。三、又監護宣告之裁定既因嗣後監護原因消滅而經撤銷確定，則因監護宣告而選定監護人及指定會同開具財產清冊之人之裁定，自當然失所附麗。又此係因嗣後發生之監護原因消滅經撤銷而失效，則其效力自應向後發生，並無溯及效力，爰設第三項規定。
+
+* 624 駁回撤銷監護宣告聲請之裁定，不得抗告。得聲請撤銷監護宣告之人，對於前項裁定，得向曾就該聲請為裁判之地方法院提起撤銷之訴。第六百十條、第六百十二條至第六百十六條、第六百十八條及第六百二十三條第三項之規定，於前項之訴，準用之。
+
+> 釋：一、配合修正後民法第十四條第二項規定，修正第一項及第二項文字。又為使文義更明確，將第二項文字酌予調整。二、本法第六百十七條第一項規定係因原來監護宣告不當，故以訴撤銷監護宣告，使其自始不發生效力。至於依本條第二項之撤銷之訴所為撤銷監護宣告確定判決，並無溯及效力，監護人所為之法律行為原不失其效力，故無準用之問題，爰刪除準用六百十七條第一項規定。
+
+* 624.1 輔助宣告之裁定，自受輔助宣告之人受送達或當庭受告知時發生效力。法院為前項裁定前，應使受輔助宣告之人有陳述意見之機會。第五百九十七條至第六百零四條、第六百零五條第二項及第六百零六條至第六百十八條之規定，於輔助宣告聲請事件準用之。
+
+> 釋：一、本條新增。二、配合修正後民法第十五條之一第一項規定，增訂輔助宣告聲請事件程序之相關規定。三、按聲請輔助宣告與聲請監護宣告，均係為保障心智有欠缺之人所設之制度，二者僅受宣告人之心智欠缺程度不同而有異，但其等關於於社會公益及個人利益之保護，情形相類，故兩者應施行之程序，有共通之處。惟就聲請輔助宣告與聲請監護宣告程序相異之點，則有特別規定之必要。為保護受輔助宣告之人之利益，明定輔助宣告之裁定，於送達或當庭告知予受輔助宣告人時即發生效力，如當庭告知與送達不一致時，以先生效者為準，爰設第一項規定。四、於聲請輔助宣告情形，受輔助宣告人仍有一定的心智，法院為第一項裁定前，應使受輔助宣告之人有陳述意見之機會，以保障其程序權，爰設第二項規定。五、至於與聲請監護宣告有共通處之事項，為免重複規定，爰於本條第三項就輔助宣告之聲請事件程序明定其準用監護宣告事件之相關規定。又依本項準用本法第六百零九條第一項規定，輔助宣告之裁定，不得抗告。如認為該裁定不當，應依本條第三項準用第六百零九條第二項規定，提起撤銷輔助宣告之訴，以資救濟，附此敘明。
+
+* 624.2 第六百十九條至第六百二十四條及第六百二十四條之一第二項規定，於撤銷輔助宣告聲請事件準用之。
+
+> 釋：一、本條新增。二、配合修正後民法第十五條之一第二項規定，增訂撤銷輔助宣告聲請事件程序之相關規定。三、按輔助宣告與監護宣告，僅係心智欠缺程度有異，於因宣告之原因消滅，而聲請撤銷原有之宣告，兩者應進行之程序，有共通之處，為免重複規定，特於本條就撤銷輔助宣告之聲請事件程序明定準用撤銷監護宣告聲請事件程序之相關規定。至於輔助宣告之原因已消滅，而得撤銷輔助宣告，關係受輔助宣告之人之權益甚鉅，法院在裁定前，應使其有陳述意見之機會，以保障其權益。又依本條準用第六百二十三條規定，對於撤銷輔助宣告之裁定，得提起抗告，以資救濟，併予敘明。
+
+* 624.3 法院對於監護之聲請，認為未達民法第十四條第一項之程度，而有輔助宣告之原因者，得依聲請或依職權以裁定為輔助之宣告。法院為前項裁定前，應使聲請人及受輔助宣告之人有陳述意見之機會。
+
+> 釋：一、本條新增。二、依修正後民法第十四條第三項規定，法院對於監護之聲請，認為未達同條第一項之程度者，得依同法第十五條之一第一項規定，為輔助宣告，且參諸同法第十四條第三項之立法理由，法院得依職權為輔助宣告之裁定。又聲請監護宣告之人於法院認為僅有應受輔助宣告之程度，自亦得變更為輔助宣告之聲請，爰設第一項規定。三、關於是否變更為輔助宣告，法院為裁定前應使聲請人及受輔助宣告之人有陳述意見之機會，以保障其程序權，爰設第二項規定。
+
+* 624.4 前條第一項之裁定，不得抗告。依民法規定得聲請監護或輔助宣告之人，得向曾就前條第一項聲請為裁判之地方法院，提起撤銷輔助宣告之訴或宣告監護之訴。前條第一項輔助宣告及選定輔助人之裁定，於監護宣告判決確定時，嗣後失其效力。第五百八十二條之一、第五百九十八條至第六百零四條、第六百十條至第六百十六條及第六百十八條之規定，於第二項宣告監護之訴準用之。
+
+> 釋：一、本條新增。二、法院所為輔助宣告裁定，依本法第六百二十四條之一第三項準用第六百零九條第一項規定，不得抗告。法院依前條第一項所為之裁定，亦為輔助宣告裁定，自應為同一處理，爰設第一項明定之。三、前條第一項裁定不得抗告，依民法規定得聲請監護或輔助宣告之人，如認為該項裁定自始不當時，應賦予一定之事後程序保障，以資救濟。基於程序處分權之法理，當事人對於前開裁定，可視其不服之內容而決定其提訴之種類，如認為法院輔助宣告之裁定自始不當者，即得提起撤銷輔助宣告之訴，於撤銷輔助宣告之判決確定時，輔助宣告裁定因被撤銷而自始失其效力；如認為法院僅為輔助之宣告而未為監護之宣告為不當者，則可提起宣告監護之訴，由法院逕為監護宣告，於判決確定時，始生監護宣告之效力，爰設第二項規定。四、撤銷輔助宣告之判決確定時，其輔助宣告因被撤銷而自始失其效力，則因輔助宣告裁定而選定輔助人之裁定，依本法第六百二十四條之一第三項準用第六百十六條之一規定，亦失所附麗，而自始失其效力。至於依本條第二項規定提起監護宣告之訴，原輔助宣告及選定輔助人之裁定，於監護宣告判決確定前，仍有其效力，僅於該判決確定後，始嗣後失其效力，與前開提起撤銷輔助宣告之訴之法律效果不同，爰設第三項規定。五、宣告監護之訴，係屬新訴訟類型，其與聲請監護宣告同屬請求法院以裁判宣告監護，兩者應進行之程序，有共通之處，本法第五百九十八條至第六百零四條關於監護宣告聲請事件之相關程序規定，自有準用之必要。再者，關於提起宣告監護之訴之當事人適格、提訴期間、受監護宣告之人之訴訟能力、訴之合併禁止、受監護宣告之人於判決確定前死亡者之處理、原告於判決確定前死亡者之承受訴訟、不適用認諾及訴訟上自認規定、法院得斟酌當事人所未提出之事實並依職權調查證據、法院於判決確定前因保護受監護宣告之人之身體或財產所為必要之處分及判決確定之公告要旨等事項，則準用同屬訴訟程序之撤銷監護宣告之訴規定；當事人就監護宣告及選定監護人、指定會同開具財產清冊之人之判決，僅就監護宣告之判決提起上訴者，準用本法第五百八十二條之一第一項規定，對於原判決就選定監護人及指定會同開具財產清冊之人之判決部分，應視為一併提起上訴，以免裁判岐異；而當事人就法院所為監護宣告之判決，僅就選任監護人及指定會同開具財產清冊之人部分聲明不服者，則準用第五百八十二條之一第三項規定，適用本法第六百零九條之一關於抗告程序之規定，爰設第四項規定。又撤銷輔助宣告之訴，可直接適用本法第六百二十四條之一第三項規定，無須重複規定，併予敘明。
+
+* 624.5 法院對於撤銷監護宣告之聲請，認受監護宣告之人受監護原因消滅，而仍有輔助之必要者，得依聲請或依職權以裁定變更為輔助之宣告。第六百二十三條第三項及第六百二十四條之三第二項規定，於前項變更裁定準用之。第一項變更裁定，不得抗告。依民法規定得聲請監護或輔助宣告之人，得向曾就第一項聲請為裁判之地方法院，提起撤銷輔助宣告之訴或撤銷變更之訴。第六百十條至第六百十八條規定，於前項撤銷變更之訴準用之。原監護宣告、選定監護人及指定會同開具財產清冊之人之裁定，於變更裁定經判決撤銷確定時，回復其效力。
+
+> 釋：一、本條新增。二、依修正後民法第十四條第四項規定，受監護之原因消滅，而仍有輔助之必要者，法院得依第十五條之一第一項規定變更為輔助之宣告，參諸第十四條第四項之立法理由，法院得逕行變更為輔助宣告之裁定。故法院對於撤銷監護宣告之聲請，認為受監護宣告之人，其受監護之原因消滅，而仍有輔助之必要者，自亦得依聲請或依職權變更為輔助宣告之裁定，爰設第一項規定。三、法院所為第一項變更裁定確定生效時，因監護宣告時而選定監護人及指定會同開具財產清冊之人之裁定，已無續存效力之必要；而自監護宣告變更為輔助宣告，對聲請人及受輔助宣告之人權益影響甚鉅，法院為裁定前應使其等有陳述意見之機會，以保障其程序權，爰設第二項規定。四、法院所為輔助宣告裁定，依本法第六百二十四條之一第三項準用第六百零九條第一項規定，不得抗告。法院依第一項所為之裁定，亦為輔助宣告之裁定，應為同一處理，爰設第三項明定之。至於輔助宣告時，依本法第六百二十四條之一準用第六百零四條第一項規定，應依職權選任輔助人，自屬當然。五、依民法規定得聲請監護或輔助宣告之人，如認為第一項裁定自始不當時，應賦予一定之事後程序保障，以資救濟。基於程序處分權之法理，當事人對於前開裁定，可視其不服之內容而決定其提訴之種類，如認為受監護原因已消滅，且無輔助宣告之必要者，得提起撤銷輔助宣告之訴，以撤銷法院所為之輔助宣告；如認為尚有監護原因而變更為輔助宣告係不當者，則得提起撤銷變更之訴，以回復原監護宣告之效力，爰設第四項規定。六、本法第六百十條至第六百十八條關於撤銷監護宣告之訴程序之相關規定，於前項撤銷變更之訴有準用之必要，爰設第五項規定。至於撤銷輔助宣告之訴，可直接適用本法第六百二十四條之一第三項規定，無須重複規定，併予敘明。七、對於第一項之變更裁定提起撤銷變更之訴而經法院判決撤銷確定時，即回復至原監護宣告之狀態，不必另為監護宣告，故原監護宣告、選定監護人及指定會同開具財產清冊之人之裁定，均應回復其效力，爰設第六項規定。
+
+* 624.6 法院對於變更監護宣告為輔助宣告之聲請，認有理由者，應以裁定變更之。第六百二十四條之五第二項至第六項規定，於前項變更裁定準用之。
+
+> 釋：一、本條新增。二、法院對於變更監護宣告為輔助宣告之聲請，認為有理由者，參酌修正後民法第十四條第四項規定，應為變更為輔助之宣告，爰設第一項規定。三、法院所為前開變更裁定，其性質與前條第一項之變更裁定相類，為避免重複規定，特於本條第二項明定裁定變更事件程序定其準用前條第二項至第六項規定。又本條第二項係規範聲請變更監護宣告為輔助宣告之事件，故其準用之範圍，僅限於撤銷變更之訴，至於認為法院宣告輔助宣告為不當而提起撤銷輔助宣告之訴，可逕適用本法第六百二十四條之一第三項規定，不在本條第二項準用之列，自不待言。
+
+* 624.7 受輔助宣告之人，法院認有受監護之必要者，得依聲請以裁定變更為監護宣告。第六百二十四條之五第二項至第六項規定，於前項變更裁定準用之。
+
+> 釋：一、本條新增。二、受輔助宣告之人，因精神障礙或其他心智缺陷致不能為意思表示或受意思表示或不能辨別其意思表示之效果，而有受監護宣告之必要者，依民法第十五條之一第三項規定，法院得依第十四條第一項規定，變更為監護之宣告，則受輔助宣告之人，法院認為有受監護必要者，自得依聲請以裁定將輔助宣告變更為監護宣告；若有聲請權之人均未提出聲請，法院不得依職權逕將輔助宣告變更為監護宣告，爰設第一項規定。三、法院所為前開變更裁定，其性質與本法第六百二十四條之五第一項之變更裁定相同，為避免重複規定，該條第二項至第六項規定，有準用之必要，爰設第二項規定。又本項係規範聲請變更輔助宣告為監護宣告之事件，故其準用之範圍，僅限於撤銷變更之訴，至於認為法院宣告監護宣告為不當而提起撤銷監護宣告之訴，可逕適用本法第六百零九條以下關於撤銷監護宣告之訴之相關規定，不在本條第二項準用之列，自不待言。
+
+* 624.8 法院對於輔助宣告之聲請，認有監護之必要者，應向聲請人曉諭變更為監護宣告之聲請，不為變更者，應駁回其聲請。
+
+> 釋：一、本條新增。二、法院對於輔助宣告之聲請，認有監護之必要者，不得依職權逕為監護之宣告，應向聲請人曉諭變更，如聲請人同意變更為監護宣告聲請者，即按監護宣告聲請程序處理，如聲請人經法院曉諭後仍不變更者，則應以裁定駁回其輔助宣告之聲請，爰設本條。
 
 * 625 宣告死亡事件，除本章別有規定外，準用第五百四十條至第五百五十三條之規定。
 
