行政訴訟法 2009.12.2

--- a/司法-行政訴訟/行政訴訟法.md
+++ b/司法-行政訴訟/行政訴訟法.md
@@ -358,7 +358,7 @@
 
 * 153 第一百四十八條之規定，於證人拒絕具結者準用之。
 
-* 154 當事人得聲請審判長對於證人為必要之發問，審判長亦得許可當事人自行對於證人發問。審判長認為當事人聲請之發問，或經許可之自行發問有不當者，得不為發問或禁止之。關於發問之應否許可或禁止有異議者，行政法院應就其異議為裁定。
+* 154 當事人得就應證事實及證言信用之事項，聲請審判長對於證人為必要之發問，或向審判長陳明後自行發問。前項之發問，與應證事實無關、重複發問、誘導發問、侮辱證人或有其他不當情形，審判長得依聲請或依職權限制或禁止。關於發問之限制或禁止有異議者，行政法院應就其異議為裁定。
 
 * 155 行政法院應發給證人法定之日費及旅費；證人亦得於訊問完畢後請求之。但被拘提或無正當理由拒絕具結或證言者，不在此限。前項關於日費及旅費之裁定，得為抗告。證人所需之旅費，得依其請求預行酌給之。
 
